# Hackathon_2025

./: .coverage  .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
dalriv/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
dalriv/.github/: ISSUE_TEMPLATE.md
dalriv/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
dalriv/src/dalriv/: __init__.py
dalriv/tests/: __init__.py  test_dalriv.py
data/: Project Instructions.docx  feature_map.csv  first_task_made.xlsx  removed_HR  removed_physio_test.txt
data/clinical/: demographic_and_clinical.xlsx
data/physio/: statistics_hr.xlsx  statistics_hrv.xlsx
data/tasks/: stop_it_with_code_book.xlsx  tap_it_with_code_book.xlsx
src/: PhysioDataManager.py  __init__.py  data_loader.py  imputer.py  metric_predictor.py  metric_unit.py  metrices_enum.py  metrics_enum.py  pipeline.py  playground.ipynb  test_DataLoader.py  visualizer.py
tests/: .gitkeep  test_DataLoader.py  test_imputer.py  test_metric_unit.py  test_metricpredictor.py  test_visualizer.py
